Reformat only for devices smaller than 576px

--- a/css/style.css
+++ b/css/style.css
@@ -37,7 +37,7 @@ h3 {
 .navigation-links {
   display: flex;
   justify-content: center;
-  margin: 40px 0;
+  margin: 20px 0;
 }
 
 .contact,
@@ -93,4 +93,17 @@ h3 {
   font-size: 18px;
   line-height: 1.5;
   border-radius: 4px;
+}
+
+@media (max-width: 576px) {
+  h1 {
+    font-size: 50px;
+  }
+  h2 {
+    font-size: 30px;
+  }
+  h3 {
+    font-size: 16px;
+  }
+
 }
