--- a/css/style.css
+++ b/css/style.css
@@ -6,6 +6,7 @@
 
 .container-no-navbar {
   margin-top: 100px;
+  margin-bottom: 50px;
 }
 
 h1,
@@ -105,5 +106,4 @@ h3 {
   h3 {
     font-size: 16px;
   }
-
 }
